# netto

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  publish_test.yml  workflow.yml
data/: README.md  pension_correction_factors.json  soli.json
data/pension_factors/: 2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/social_security/: 2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/soli/: 2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
data/tax_curves/: 2018.json  2019.json  2020.json  2021.json  2022.json  2023.json  2024.json  2025.json  2026.json
docs/: conf.py  index.rst  requirements.txt
examples/: config_2022.yml  examples.py
netto/: __init__.py  config.py  const.py  data_loader.py  income_tax.py  main.py  social_security.py  taxes.py  taxes_income.py  taxes_other.py
test/: test_config.py  test_data_loader.py  test_income_tax.py  test_main.py  test_social_security.py  test_taxes_income.py  test_taxes_other.py
