[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netto"
version = "0.2.0a3"
authors = [
  { name="Martin Klein", email="hi@martinklein.co" },
]
description = "German income tax (Einkommensteuer) and social security (Sozialabgaben) calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scipy",
    "pydantic>=2.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/0-k/netto"
"Documentation" = "https://netto.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/0-k/netto/issues"

[tool.setuptools]
packages = ["netto"]

[tool.setuptools.package-data]
netto = ["../data/**/*.json", "../data/**/*.md"]

[tool.ruff]
line-length = 88  # Black-compatible default, widely adopted standard
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"